add multilingual support for Hero component

--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -1,6 +1,6 @@
 {
   "navbar": {
-    "home": "Home",
+    "home": "StartPagina",
     "about": "Over mij",
     "skills": "Vaardigheden",
     "projects": "Projecten",
