--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -13,5 +13,27 @@
     "skills": "ری‌اکت | تایپ‌اسکریپت | تیلویند | نود.جی‌اس",
     "viewWork": "مشاهده کارهای من",
     "contactMe": "تماس با من"
+  },
+   "skills": {
+    "title": "مهارت‌ها",
+    "subtitle": "زبان‌ها، فریم‌ورک‌ها و کتابخانه‌ها",
+    "list": {
+      "html": "HTML5",
+      "css": "CSS3",
+      "javascript": "جاوااسکریپت",
+      "react": "ری‌اکت",
+      "typescript": "تایپ‌اسکریپت",
+      "tailwind": "تیلویند‌سی‌اس‌اس",
+      "node": "نود.جی‌اس",
+      "mysql": "مای‌اس‌کیو‌ال",
+      "mongodb": "مانگو‌دی‌بی",
+      "jest": "جست (تست‌نویسی)",
+      "postman": "پست‌من",
+      "figma": "فیگما",
+      "firebase": "فایربیس",
+      "netlify": "نتلیفای",
+      "jira": "جیرا",
+      "git": "گیت و گیت‌هاب"
+    }
   }
 }
