add multilingual support for Projects section

--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -35,5 +35,28 @@
       "jira": "جیرا",
       "git": "گیت و گیت‌هاب"
     }
-  }
+  },
+  "projects": {
+  "title": "پروژه‌ها",
+  "list": {
+    "shareWithUs": {
+      "name": "اشتراک‌گذاری وسایل",
+      "desc": "یک اپلیکیشن فول‌استک برای قرض دادن و گرفتن وسایل درون جامعه، ساخته شده با MERN Stack."
+    },
+    "shopMate": {
+      "name": "لیست خرید من",
+      "desc": "یک اپلیکیشن هوشمند برای لیست خرید، ساخته‌شده با TypeScript، React (Vite) و Firebase. به کاربران کمک می‌کند لیست خرید خود را با دیگران به اشتراک بگذارند و به‌صورت لحظه‌ای همگام بمانند."
+    },
+    "cryptoApp": {
+      "name": "کریپتو اپ",
+      "desc": "یک داشبورد ارز دیجیتال ساخته‌شده با React و CoinGecko API که شامل جستجوی زنده، نمودارها و ذخیره‌سازی محلی است."
+    },
+    "weatherApp": {
+      "name": "اپلیکیشن هواشناسی",
+      "desc": "اپلیکیشنی برای نمایش وضعیت فعلی هوا و پیش‌بینی ۵ روز آینده در هر شهر از جهان."
+    }
+  },
+  "viewProject": "مشاهده پروژه →"
+}
+
 }
