--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,5 +37,28 @@
       "jira": "Jira",
       "git": "Git & GitHub"
     }
-  }
+  },
+  "projects": {
+  "title": "Projects",
+  "list": {
+    "shareWithUs": {
+      "name": "ShareWithUs",
+      "desc": "A full-stack app for lending & borrowing items within a community. Built with the MERN stack."
+    },
+    "shopMate": {
+      "name": "ShopMate",
+      "desc": "A smart shopping list app built with TypeScript, React (Vite), and Firebase. It helps users organize groceries, share lists, and stay synchronized in real-time."
+    },
+    "cryptoApp": {
+      "name": "Crypto-App",
+      "desc": "A crypto dashboard built with React & CoinGecko API. Includes live search, charts, and local storage."
+    },
+    "weatherApp": {
+      "name": "Weather-App",
+      "desc": "An interactive weather app that shows current weather and a 5-day forecast for any city worldwide."
+    }
+  },
+  "viewProject": "View Project →"
+}
+
 }
