add translations for Contact section in English, Persian, and Dutch

--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -74,7 +74,15 @@
   "title": "سفر من 🚀",
   "text": "از سال ۲۰۱۵ تا ۲۰۲۱ به عنوان حسابدار در ایران کار می‌کردم. در طول این شش سال، تجربه‌ی زیادی در مدیریت مالی، حسابداری و تهیه گزارش‌های دقیق کسب کردم. این تجربیات باعث شد مهارت‌های تفکر تحلیلی، نظم و حل مسئله در من تقویت شود، مهارت‌هایی که اکنون در مسیر توسعه نرم‌افزار از آن‌ها استفاده می‌کنم.",
   "imageAlt": "سمیرا در محل کار"
+},
+"contact": {
+  "title": "ارتباط با من",
+  "description": "می‌توانید از طریق ایمیل یا شبکه‌های اجتماعی با من در ارتباط باشید.",
+  "email": "ایمیل",
+  "linkedin": "لینکدین",
+  "github": "گیت‌هاب"
 }
+
 
 
 
