--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -76,7 +76,15 @@
   "title": "My Journey 🚀",
   "text": "From 2015 to 2021, I worked as an Accountant in Iran. During these six years, I gained deep expertise in financial management, bookkeeping, and preparing accurate reports. These experiences shaped my ability to think critically, stay organized, and solve problems logically, skills I now apply to my career in software development.",
   "imageAlt": "Samira working at her desk"
+},
+"contact": {
+  "title": "Contact Me",
+  "description": "Feel free to reach out via email or connect with me on social media.",
+  "email": "Email",
+  "linkedin": "LinkedIn",
+  "github": "GitHub"
 }
+
 
 
 
