--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -74,7 +74,15 @@
   "title": "Mijn Reis 🚀",
   "text": "Van 2015 tot 2021 werkte ik als accountant in Iran. Tijdens deze zes jaar heb ik diepgaande kennis opgedaan van financieel beheer, boekhouding en het opstellen van nauwkeurige rapporten. Deze ervaringen hebben mijn vermogen om kritisch te denken, georganiseerd te blijven en problemen logisch op te lossen versterkt, vaardigheden die ik nu toepas in mijn loopbaan als softwareontwikkelaar.",
   "imageAlt": "Samira aan het werk"
+},
+"contact": {
+  "title": "Neem contact met mij op",
+  "description": "Neem gerust contact met mij op via e-mail of sociale media.",
+  "email": "E-mail",
+  "linkedin": "LinkedIn",
+  "github": "GitHub"
 }
+
 
 
 
