--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -82,6 +82,12 @@
   "linkedin": "لینکدین",
   "github": "گیت‌هاب"
 }
+,
+"resume": {
+  "title": "رزومه",
+  "description": "می‌توانید رزومه من را مشاهده یا دانلود کنید.",
+  "button": "مشاهده رزومه"
+}
 
 
 
