--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -81,7 +81,14 @@
   "email": "E-mail",
   "linkedin": "LinkedIn",
   "github": "GitHub"
+},
+"resume": {
+  "title": "CV",
+  "description": "Bekijk of download mijn CV hieronder.",
+  "button": "Bekijk CV"
 }
+
+
 
 
 
