design and style with tailwind css

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "navbar": {
     "home": "Home",
+    "resume": "Resume",
     "about": "About",
     "skills": "Skills",
     "projects": "Projects",
