design and style with tailwind css

--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -1,12 +1,16 @@
 {
   "navbar": {
-    "home": "خانه",
-    "about": "درباره من",
-    "skills": "مهارت‌ها",
-    "projects": "پروژه‌ها",
-    "journey": "سفر کاری من",
-    "contact": "تماس با من"
-  },
+  "home": "خانه",
+  "resume": "رزومه",
+  "about": "درباره من",
+  "myStory": "داستان من",
+  "skills": "مهارت‌ها",
+  "projects": "پروژه‌ها",
+  "experience": "تجربه کاری من",
+  "journey": "سفر من",
+  "contact": "تماس با من"
+},
+
   "hero": {
     "greeting": "سلام، من سمیرا احمدی هستم",
     "title": "توسعه‌دهنده نرم‌افزار جونیور",
@@ -87,7 +91,30 @@
   "title": "رزومه",
   "description": "می‌توانید رزومه من را مشاهده یا دانلود کنید.",
   "button": "مشاهده رزومه"
+},
+"story": {
+  "title": "داستان من",
+  "sections": {
+    "journey": {
+      "title": "سفر من",
+      "text1": "من سمیرا احمدی هستم، ۳۶ ساله، متأهل و بدون فرزند. در وینندال، هلند زندگی می‌کنم. در شیراز، ایران به دنیا آمدم و سال‌ها در حوزه مالی کار کردم.",
+      "text2": "چند سال پیش تصمیم بزرگی گرفتم. از منطقه امنم بیرون آمدم و در کشور و زبانی جدید، در مسیری کاملاً متفاوت یعنی فناوری اطلاعات شروع دوباره‌ای داشتم.",
+      "text3": "این مسیر مهاجرت و بازآفرینی به من یاد داد چطور در موقعیت‌های ناآشنا قوی بمانم، سریع سازگار شوم و همیشه کنجکاو باشم. این چالش‌ها من را نشکستند، بلکه ساختند."
+    },
+    "learning": {
+      "title": "آنچه آموخته‌ام",
+      "text1": "من در بوت‌کمپ HackYourFuture در هلند توسعه وب فول‌استک را آموختم. در آنجا جاوااسکریپت، نود، اکسپرس، ری‌اکت و مونگو‌دی‌بی یاد گرفتم و فهمیدم به توسعه بک‌اند علاقه بیشتری دارم.",
+      "text2": "یکی از مهم‌ترین تجربه‌هایم پروژه پایانی گروهی بود، جایی که سیستم احراز هویت را طراحی کردم و فرانت‌اند را به بک‌اند متصل کردم. ابتدا دشوار بود، اما با تلاش و یادگیری گام‌به‌گام موفق شدم.",
+      "text3": "در کنار مهارت‌های فنی، فردی قابل اعتماد، آرام در شرایط استرس‌زا و ارتباط‌گر خوبی هستم. از کار با افراد با پیشینه‌های متفاوت لذت می‌برم و به همکاری محترمانه و شفاف باور دارم."
+    },
+    "goals": {
+      "title": "اهداف شغلی",
+      "text1": "بیشتر به نقش توسعه‌دهنده علاقه‌مندم، جایی که با منطق، داده‌ها و API از حل مسائل پشت صحنه و ایجاد سیستم‌های روان لذت می‌برم.",
+      "text2": "رویای من رشد در محیط حرفه‌ای فناوری اطلاعات است؛ جایی که علاوه بر مهارت فنی، با انضباط، مسئولیت‌پذیری و مهربانی در تیم نقش مؤثری داشته باشم."
+    }
+  }
 }
+
 
 
 
