--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,6 +3,7 @@
     "home": "Home",
     "resume": "Resume",
     "about": "About",
+    "myStory": "myStory",
     "skills": "Skills",
     "projects": "Projects",
     "journey": "Journey",
@@ -93,7 +94,29 @@
   "title": "Resume",
   "description": "You can view or download my CV below.",
   "button": "View Resume"
+}, "story": {
+  "title": "My Story",
+  "sections": {
+    "journey": {
+      "title": "My Journey",
+      "text1": "My name is Samira Ahmadi. I’m 36 years old, married, no kids, and I currently live in Veenendaal, the Netherlands. I was born and raised in Shiraz, Iran, where I worked for years in finance.",
+      "text2": "A few years ago, I made a bold decision. I left my comfort zone and started over in a new country, with a new language, and in a completely different field: IT.",
+      "text3": "This journey of migration and reinvention taught me how to stay strong when everything feels unfamiliar, how to adapt quickly, and how to stay curious no matter what. These challenges didn’t break me—they built me."
+    },
+    "learning": {
+      "title": "What I’ve Learned",
+      "text1": "I studied full-stack web development at HackYourFuture, a bootcamp for newcomers in the Netherlands. I learned JavaScript, Node.js, MongoDB, Express, and React, and found that I especially enjoy backend development.",
+      "text2": "One highlight for me was our final group project. I built the authentication system and connected the frontend and backend. It was hard at first, but I kept pushing, asked for help, and figured it all out step by step.",
+      "text3": "Besides technical skills, I’m also reliable, calm under stress, and a good communicator. I enjoy working with people from different backgrounds and believe in clear, respectful collaboration."
+    },
+    "goals": {
+      "title": "Career Goals",
+      "text1": "I’m most interested in a full stack . I love solving problems behind the scenes and making things run smoothly.",
+      "text2": "My dream is to grow in a professional IT environment where I can contribute not only as a developer but also as someone who brings discipline, reliability, and kindness to the team."
+    }
+  }
 }
+
 
 
 
