--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -97,26 +97,29 @@
   "sections": {
     "journey": {
       "title": "سفر من",
-      "text1": "من سمیرا احمدی هستم، ۳۶ ساله، متأهل و بدون فرزند. در وینندال، هلند زندگی می‌کنم. در شیراز، ایران به دنیا آمدم و سال‌ها در حوزه مالی کار کردم.",
-      "text2": "چند سال پیش تصمیم بزرگی گرفتم. از منطقه امنم بیرون آمدم و در کشور و زبانی جدید، در مسیری کاملاً متفاوت یعنی فناوری اطلاعات شروع دوباره‌ای داشتم.",
-      "text3": "این مسیر مهاجرت و بازآفرینی به من یاد داد چطور در موقعیت‌های ناآشنا قوی بمانم، سریع سازگار شوم و همیشه کنجکاو باشم. این چالش‌ها من را نشکستند، بلکه ساختند."
+      "text1": "من سمیرا احمدی هستم، ۳۶ ساله، متأهل و ساکن وینندال در هلند. در شیراز به دنیا اومدم و چند سال در زمینه مالی کار کردم. چند سال پیش تصمیم گرفتم از منطقه امنم بیرون بیام، به کشور جدیدی مهاجرت کنم، زبانی تازه یاد بگیرم و وارد دنیای برنامه‌نویسی بشم.",
+      "text2": "این مسیر بهم یاد داد چطور قوی بمونم وقتی همه چیز ناآشناست، چطور سریع خودمو وفق بدم و چطور کنجکاوی و اشتیاقم رو حفظ کنم. آسون نبود، ولی باعث شد خود واقعیمو پیدا کنم.",
+      "text3": "یاد گرفتم که رشد از راحتی نمیاد، از چالش‌ها میاد — و همین طرز فکر الان موتور پیشرفت من در دنیای توسعه نرم‌افزاره."
     },
     "learning": {
-      "title": "آنچه آموخته‌ام",
-      "text1": "من در بوت‌کمپ HackYourFuture در هلند توسعه وب فول‌استک را آموختم. در آنجا جاوااسکریپت، نود، اکسپرس، ری‌اکت و مونگو‌دی‌بی یاد گرفتم و فهمیدم به توسعه بک‌اند علاقه بیشتری دارم.",
-      "text2": "یکی از مهم‌ترین تجربه‌هایم پروژه پایانی گروهی بود، جایی که سیستم احراز هویت را طراحی کردم و فرانت‌اند را به بک‌اند متصل کردم. ابتدا دشوار بود، اما با تلاش و یادگیری گام‌به‌گام موفق شدم.",
-      "text3": "در کنار مهارت‌های فنی، فردی قابل اعتماد، آرام در شرایط استرس‌زا و ارتباط‌گر خوبی هستم. از کار با افراد با پیشینه‌های متفاوت لذت می‌برم و به همکاری محترمانه و شفاف باور دارم."
+      "title": "چیزهایی که یاد گرفتم",
+      "text1": "توسعه وب فول‌استک رو در بوت‌کمپ HackYourFuture در هلند یاد گرفتم. اونجا جاوااسکریپت، نود، مونگو‌دی‌بی، اکسپرس و ری‌اکت رو یاد گرفتم. فهمیدم چقدر از کار کردن روی کل مسیر ساخت نرم‌افزار، از منطق بک‌اند تا طراحی فرانت‌اند، لذت می‌برم.",
+      "text2": "در پروژه نهایی، سیستم احراز هویت رو ساختم و فرانت‌اند و بک‌اند رو به هم وصل کردم. اولش سخت بود، ولی با پشتکار و پرسیدن سؤال پیش رفتم و قدم‌به‌قدم همه چیز برام جا افتاد.",
+      "text3": "علاوه بر مهارت‌های فنی، آدمی آرام، قابل اعتماد و خوش‌برخورد هستم. از کار تیمی و یاد گرفتن از بقیه لذت می‌برم."
     },
     "goals": {
       "title": "اهداف شغلی",
-      "text1": "بیشتر به نقش توسعه‌دهنده علاقه‌مندم، جایی که با منطق، داده‌ها و API از حل مسائل پشت صحنه و ایجاد سیستم‌های روان لذت می‌برم.",
-      "text2": "رویای من رشد در محیط حرفه‌ای فناوری اطلاعات است؛ جایی که علاوه بر مهارت فنی، با انضباط، مسئولیت‌پذیری و مهربانی در تیم نقش مؤثری داشته باشم."
+      "text1": "به توسعه فول‌استک علاقه دارم چون عاشق ساختن چیزها از صفر تا صد هستم — از منطق پشت صحنه تا تجربه کاربری جلوی چشم کاربر.",
+      "text2": "هدفم اینه که به‌عنوان یه توسعه‌دهنده فول‌استک توی تیمی رشد کنم که یادگیری، همکاری و مهربونی براش ارزشمنده. می‌خوام مهارتمو بهتر کنم، با چالش‌های واقعی روبه‌رو بشم و نرم‌افزاری بسازم که زندگی رو برای بقیه کمی آسون‌تر کنه."
     }
   }
 }
 
 
-
-
-
 }
+
+
+
+
+
+
