--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -79,7 +79,7 @@
   ]
 },
 "journey": {
-  "title": "My Journey 🚀",
+  "title": "My Journey",
   "text": "From 2015 to 2021, I worked as an Accountant in Iran. During these six years, I gained deep expertise in financial management, bookkeeping, and preparing accurate reports. These experiences shaped my ability to think critically, stay organized, and solve problems logically, skills I now apply to my career in software development.",
   "imageAlt": "Samira working at her desk"
 },
