--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -75,7 +75,7 @@
   ]
 },
 "journey": {
-  "title": "سفر من 🚀",
+  "title": "سفر من",
   "text": "از سال ۲۰۱۵ تا ۲۰۲۱ به عنوان حسابدار در ایران کار می‌کردم. در طول این شش سال، تجربه‌ی زیادی در مدیریت مالی، حسابداری و تهیه گزارش‌های دقیق کسب کردم. این تجربیات باعث شد مهارت‌های تفکر تحلیلی، نظم و حل مسئله در من تقویت شود، مهارت‌هایی که اکنون در مسیر توسعه نرم‌افزار از آن‌ها استفاده می‌کنم.",
   "imageAlt": "سمیرا در محل کار"
 },
